--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Oswald', sans-serif;
+}
+
 #container {
     height: 2500px;
     border: 1px solid black;
@@ -22,5 +26,10 @@
 
 #triggerTwo {
     top: 500px;
+}
+
+
+footer {
+    text-align: center;
 }
 
